# rtl-spectrum-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
resources/: README.md  default.yaml
src/rtl_spectrum/: __init__.py  analysis.py  bands.py  cli.py  formatters.py  io.py  models.py  parser.py  plotting.py  progress.py  runner.py
src/rtl_spectrum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analysis.py  test_bands.py  test_formatters.py  test_io.py  test_parser.py  test_sweep_parser.py  test_time_analysis.py  test_validation.py
tests/resources/: subtract.csv  test.csv  test_validation.csv
